# trader

./: .coveragerc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .spelling  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  FSM_AUDIT_REPORT.md  HISTORY.md  Makefile  README.md  ROI distribution_ Description and Audit.md  SECURITY.md  TOOL_SELECTION_SPEC.md  aea_bin.py  aea_bin.spec  ai_fix.py  check_agent_runner.py  config-mapping.json  custom_ports.md  fsm_audit.md  get_pyinstaller_dependencies.py  kelly_strategy_proof.md  pyproject.toml  run_agent.sh  run_service.sh  staking.py  tox.ini  update-packagejson.py
.github/workflows/: common_checks.yaml  merge_rules.yaml  release.yaml  release_candidate.yaml  synk-security.yaml  test_release.yaml
.hypothesis/examples/66455b79547dc25b/: 8e50b53460dc27c3
.hypothesis/examples/69d62ba3e8a75263/: d6c0cd9d9104ff77
.hypothesis/examples/720aaa0884299c91/: 005f208a0f452cf7  0198e8048f45c5fb  01a8ab25fff77160  01af27b675f61100  056bfe3a3129b87e  06f2e8790c9f4856  08654c45734539ab  09614aac18f13f1e  09cc7a025534936b  0bd0f0833779c4dd  0c1a5f48a23ad4e6  0c82eccb61894683  0e1a26ac9ee56efa  0e457d76f76a760d  0e4b66245b8bbd07  0ec68855bee1643d  1216124065b58613  121cd51ee01a5259  12900fcb8abad316  13137b4799c29dab  1808365492fc4d5d  18a39857648dc51a  1b221eb1ed7090a5  1b8a894ea2574c1b  1bd2e91ee5f101f7  1d4bdd1cf9471703  1dff6e6f5e1cb0d2  21df1ae0a5b61995  228d6da1154a89db  236494422a6c5da7  2379f89c59f4973f  23db512587072c6b  24b81e9ad73f03de  26543fd9980cb098  27b464571b01a0ef  27d2b078d90c3336  2975b35330629e10  2a4d4524a2270187  2aa0131d2ceeee9a  2c44bd3be0da1fc6  (+161 more)
.hypothesis/examples/9754a8d5f3d86781/: 4cbeeec8bfdea919  b9168f6a89bfec4e
.hypothesis/examples/b8c33781f299d98f/: a4dcb1aa00d81c25
.hypothesis/examples/bf74cf893cf91a95/: 2cba03c7a570559f
.hypothesis/examples/cd769dfa0a6ff621/: 23c4bc18e97407ae  33417c8a79308ec4  95f3038941ef5c50  add71e93c2c172c8
.hypothesis/examples/dbf00372d78a0872/: 002ed06b84caa508  0269c66d48b82d28  06e5d9a5c829acea  09426d55a833535a  097d222dd7b23cf9  09bc96b41b304fed  0a46a47ebdc279c9  0acebef24903c819  0bb6cf528f1311d8  0c48a75c318932f4  13f1b3dfab73c657  (+89 more)
docs/: external_request_resilience_audit.md  fsm_audit.md
memory/: MEMORY.md
mints/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  mapping.txt  whitelist.txt
plans/: KELLY_IMPLEMENTATION_PLAN.md  PREDICT-691_sleep_overflow_hotfix.md  PREDICT-827_omenstrat_swap_label.md
plans/kelly/: IMPLEMENTATION_DECISIONS.md  UNIFIED_KELLY_ALGO_SPEC.md
plans/rollback/: ROLLBACK_V032_KELLY_COMPAT.md
pyinstaller/: __init__.py  trader_bin.py
reports/: REPLAY_V2_METHODOLOGY.md  production_readiness_note_2026-03-26.md
reports/omen_dynamic_agents_exact_2026-03-20_2026-03-26/: README.md  dynamic_agents_summary.json
reports/omen_genuinely_graded_agents_2026-03-20_2026-03-26/: README.md  graded_agents_summary.json
reports/polystrat_kelly_replay_2026-03-12_2026-03-26/: README.md  snapshot.json
reports/polystrat_kelly_replay_2026-03-20_2026-03-26/: README.md  roi_distribution_summary.json  snapshot.json
reports/polystrat_kelly_replay_2026-03-23_2026-03-26/: README.md  params_best_cluster.json  snapshot.json
reports/polystrat_kelly_replay_comparison_2026-03-20_vs_2026-03-23/: README.md
reports/polystrat_kelly_replay_v2_2026-03-12_2026-03-26/: README.md  replay_comparison.json  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json  snapshot_enriched.json
reports/polystrat_kelly_replay_v2_2026-03-20_2026-03-26/: README.md  replay_mop_01.json  replay_mop_03.json  replay_mop_05.json  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json  snapshot_enriched.json
reports/polystrat_kelly_replay_v2_2026-03-23_2026-03-26/: README.md  replay_mop_01.json  replay_mop_03.json  replay_mop_05.json  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json  snapshot_enriched.json
reports/polystrat_kelly_replay_v2_comparison/: BET_SIZING_ANALYSIS.md  MARKET_SUPPLY_ANALYSIS.md  NEGRISK_YES_STRATEGY_ANALYSIS.md  README.md  SIDE_SWITCH_ANALYSIS.md  market_supply_data.json
reports/polystrat_kelly_replay_v2b_2026-03-12_2026-03-26/: README.md  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json
reports/polystrat_kelly_replay_v2b_2026-03-20_2026-03-26/: README.md  replay_mop_01.json  replay_mop_03.json  replay_mop_05.json  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json
reports/polystrat_kelly_replay_v2b_2026-03-23_2026-03-26/: README.md  replay_mop_01.json  replay_mop_03.json  replay_mop_05.json  segmented_mop_01.json  segmented_mop_03.json  segmented_mop_05.json
reports/polystrat_kelly_replay_v2b_comparison/: PARAMETER_DEEP_ANALYSIS.md  README.md
scripts/: __init__.py  aea-config-replace.py  analyze_pearl_logs.py  bump.py  check_dependencies.py  check_doc_ipfs_hashes.py  enrich_snapshot_neg_risk.py  generate_port_env.py  gitleaks_ignore.py  plot_polystrat_roi_distributions.py  polystrat_kelly_chunked_snapshot.py  polystrat_kelly_replay.py  propel.py  run_service.sh  segment_replay_by_neg_risk.py  trades.py  update_rounds_info.py
strategies/: bet_amount_per_threshold.py  kelly_criterion.py  packages.json
strategies/always_blue/: __init__.py  always_blue.py  component.yaml
strategies/bet_amount_per_threshold/: bet_amount_per_threshold.py  component.yaml
strategies/kelly_criterion/: __init__.py  component.yaml  kelly_criterion.py
strategies/mike_strat/: __init__.py  component.yaml  mike_strat.py
trader_backup/: aea-config.yaml  log.txt
trader_backup/.certs/: acn_cosmos_9005.txt
trader_backup/data/: benchmarking_40.csv  bets.json  multi_bets.json  policy_store.json  policy_store_multi_bet_failure_adjusting.json  utilized_tools.json
trader_old/: aea-config.yaml
trader_old/.certs/: acn_cosmos_9005.txt
trader_old/data/: available_tools_store.json  benchmarking_results.csv  bets.json  markets_test.csv  markets_test2.csv  multi_bets.json  policy_store.json  policy_store_multi_bet_failure_adjusting.json
(+22 files in other folders)
