[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "trader"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[cli]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-helpers==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    # Agent / app — exact pins for everything else (David's rule on mech #436).
    "grpcio==1.78.0",
    "hypothesis==6.21.6",
    "hexbytes==1.3.0",
    "eth-utils==5.3.0",
    "eth-abi==5.2.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "openapi-core==0.22.0",
    "pyinstaller==6.19.0",
    "google-generativeai==0.8.2",
    "py-clob-client==0.34.5",
    "py-builder-relayer-client==0.0.1",
    # Bounded ranges — strict upper bound on every entry per David's #436 rule
    # (https://github.com/valory-xyz/mech/pull/436#discussion_r3148...) so a
    # major-version bump cannot silently land via a supply-chain attack.
    "requests<2.33.0,>=2.28.1",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "web3<8,>=7.0.0",
    "protobuf<6,>=5",
    "jsonschema<5.0.0,>=4.23.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "ecdsa<0.20,>=0.19.2",
    "pydantic<3,>=2.11.9",
    "httpx<1,>=0.23.0",
    "certifi<2027,>=2026.2.25",
    "multidict<7,>=6.7.1",
    "eth_typing<7,>=6",
    "w3multicall<0.4,>=0.3.1",
    "setuptools<=81.0.0",
    # `py-builder-signing-sdk`: sourced from a git rev pin via [tool.uv.sources]
    # below — the rev is an immutable commit SHA, equivalent to an exact pin.
    "py-builder-signing-sdk",
]

[project.urls]
Repository = "https://github.com/valory-xyz/trader"

[dependency-groups]
dev = [
    "tomte[cli, tests]>=0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.sources]
py-builder-signing-sdk = { git = "https://github.com/LOCKhart07/py-builder-signing-sdk.git", rev = "487579780479676d20867ead63db968bf460ea38" }

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
