[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "trader"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[cli]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-helpers==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "grpcio==1.78.0",
    "hypothesis==6.21.6",
    "hexbytes==1.3.0",
    "eth-utils==5.3.0",
    "eth-abi==5.2.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "openapi-core==0.22.0",
    "pyinstaller==6.19.0",
    "google-generativeai==0.8.2",
    "py_clob_client_v2==1.0.0",
    "py-builder-relayer-client==0.0.1",
    "multiaddr==0.0.9",
    "requests==2.32.5",
    "aiohttp==3.13.4",
    "asn1crypto==1.4.0",
    "web3==7.14.1",
    "protobuf==5.29.6",
    "jsonschema==4.23.0",
    "openapi-spec-validator==0.7.2",
    "typing_extensions==4.15.0",
    "ecdsa==0.19.2",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "eth_typing==6.0.0",
    "w3multicall==0.3.1",
    "filelock==3.25.2",
    "poly_eip712_structs==0.0.1",
    "setuptools==81.0.0",
    # Pinned via git rev in [tool.uv.sources].
    "py-builder-signing-sdk",
]

[project.urls]
Repository = "https://github.com/valory-xyz/trader"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@e3dcda641f4add9fe36bc8f5127b7a8863d7711e",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.sources]
py-builder-signing-sdk = { git = "https://github.com/LOCKhart07/py-builder-signing-sdk.git", rev = "487579780479676d20867ead63db968bf460ea38" }

[tool.tomte]
packages_paths = "packages/valory"
service_specific_packages = [
    "packages/valory/skills/staking_abci",
    "packages/valory/skills/market_manager_abci",
    "packages/valory/skills/decision_maker_abci",
    "packages/valory/skills/trader_abci",
    "packages/valory/skills/tx_settlement_multiplexer_abci",
    "packages/valory/skills/chatui_abci",
    "packages/valory/skills/check_stop_trading_abci",
    "packages/valory/skills/agent_performance_summary_abci",
    "packages/valory/connections/polymarket_client",
]
check_handlers_ignores = "-i abstract_abci -i contract_subscription -i funds_manager"
check_dependencies_extra_excludes = "--exclude eth-account --exclude typing-extensions --exclude py-order-utils --exclude py_builder_signing_sdk --exclude py-ecc --exclude werkzeug --exclude attrs --exclude python-dateutil --exclude urllib3"
upstream_pins = "--upstream valory-xyz/open-autonomy@0.21.19 --upstream valory-xyz/open-aea@2.2.1 --upstream valory-xyz/mech-interact@0.28.0 --upstream valory-xyz/genai@6.1.0 --upstream valory-xyz/kv-store@0.4.0 --upstream valory-xyz/funds-manager@2.3.0"
local_extensions = "tox.ini"
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@e3dcda641f4add9fe36bc8f5127b7a8863d7711e"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
